1,完成一行代码解决native的问题`mvn clean package -Pnative-debug -Dmaven.test.skip=true -am -pl graal-native-example`