@@ -16,7 +16,82 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <graal.feature>top.dreamlike.graal.PanamaFeature</graal.feature>
+        <main.class>top.dreamlike.Main</main.class>
     </properties>
+    <profiles>
+        <profile>
+            <id>native-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.9.28</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>--enable-preview</buildArg>
+                                <buildArg>--features=${graal.feature}</buildArg>
+                                <buildArg>-O3</buildArg>
+                                <buildArg>--gc=G1</buildArg>
+                                <buildArg>-march=native</buildArg>
+                            </buildArgs>
+                            <skipNativeTests>true</skipNativeTests>
+                            <mainClass>${main.class}</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>native-debug</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.9.28</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>--enable-preview</buildArg>
+                                <buildArg>--features=${graal.feature}</buildArg>
+                                <buildArg>-Ob</buildArg>
+                                <buildArg>-g</buildArg>
+                            </buildArgs>
+                            <skipNativeTests>true</skipNativeTests>
+                            <mainClass>${main.class}</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>org.graalvm.sdk</groupId>
@@ -48,7 +123,7 @@
                     <compilerArgs>
                         <compilerArg>-Aindy.enable=false</compilerArg>
                         <compilerArg>-Agenerate.graal.feature.enable=true</compilerArg>
-                        <compilerArg>-Agenerate.graal.feature.name=top.dreamlike.graal.PanamaFeature</compilerArg>
+                        <compilerArg>-Agenerate.graal.feature.name=${graal.feature}</compilerArg>
                         <compilerArg>--enable-preview</compilerArg>
                     </compilerArgs>
                 </configuration>
@@ -67,7 +142,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>top.dreamlike.Main</Main-Class>
+                                        <Main-Class>${main.class}</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                                 <transformer
@@ -81,4 +156,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
